# XiaoXin

./: CeShi.rar  README.md
Bi-charge control app/: main.py
Bi-charge control app/modules/: __init__.py  can.py  serial_functions.py
CeShi/: copyToVap.bat
CeShi/CeShi/: MENU.DB  TIPS.DB  copyToVap_db.bat  init.xml
CeShi/DongFengRiChan_db/: dtcData.txt  getDb.bat  sysData.txt
CeShi/db/: sysData.txt
CeShi/tanke300_db/: sysData.txt  tipsData.txt
CeShi/xinnengyuan_db/: BIT_AutoAD_V5.0(2).xls  BIT_AutoAD_V5.0(2).xlsx  BeiQi_BMS.TXT  BeiQi_BMS_DtcS.TXT  Dtc_Code_library.txt  USTB_BMS.TXT
Detection/: lianjieyichang.py  model.cpp  model.py  xiongnongshang.py
Detection app/: main.ui  resources_rc.py
Detection app/modules/: app_functions.py  can.py  protocol.py  ui_main.py
Detection/Data_processing/: Fault_signal_extraction.py  数据分割.py  数据提取.py  箱型图预处理.py
Detection/Demo_CppCallPython-l2/: README.md
Detection/DuoShangRongHe_matlab/: 代码2.m  (+2 more)
Detection/XiongNongShang_c++/: CMakeLists.txt  README.md
Detection/XiongNongShang_c++/Release/: XNS_Status.flag
Detection/XiongNongShang_c++/Release/Data/data_input/: 123.csv  RT20250529203634.csv
Detection/XiongNongShang_c++/Release/Data/diagnosis_output/: RT20250529203634_diagnosis.csv
Detection/XiongNongShang_c++/include/: DataProcessor.h  xns_algorithm.h
Detection/XiongNongShang_c++/src/: DataProcessor.cpp  main.cpp  xns_algorithm.cpp
Detection/XiongNongShang_c++/test/: test_xns.cpp
GCan/: main.py
MetaFD-main/: README.md
Pybind11Demo/: Pybind11Demo.sln  README.md
UDS$27/: README.md  SecurityCode.cpp
(+47 files in other folders)
